# cacau

./: manage.py  pyproject.toml
cacau/: api.py  asgi.py  database_manager.py  settings.py  urls.py  wsgi.py
core/categories/: api.py  apps.py  manager.py  models.py  schemas.py
core/categories/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_uuid.py  0003_alter_category_parent.py  0004_alter_category_parent.py
core/products_attributes/: api.py  apps.py  manager.py  models.py  schemas.py
core/products_attributes/migrations/: 0001_initial.py
core/products_attributes_values/: apps.py
core/products_attributes_values/migrations/: 0001_initial.py  0002_productattributevalue_and_more.py
core/products_bases/: api.py  apps.py  manager.py  models.py  schemas.py
core/products_bases/migrations/: 0001_initial.py
core/products_options/: admin.py  api.py  apps.py  manager.py  models.py  schemas.py
core/products_options/migrations/: 0001_initial.py  0002_alter_productoption_unity.py  0002_productoption_tag_productoption_unity.py  0003_alter_productoption_uuid.py
core/products_options_values/: api.py  apps.py  manager.py  models.py  schemas.py
core/products_options_values/migrations/: 0001_initial.py
core/products_stock/: admin.py  api.py  apps.py  manager.py  models.py  schemas.py
core/products_stock/migrations/: 0001_initial.py  0002_alter_productstock_product_option_value.py  0002_rename_product_productstock_product_base.py  (+1 more)
core/users/: admin.py  api.py  api_auth.py  manager.py  managers.py  models.py  schemas.py  security.py  tests.py
(+1 files in other folders)
